--- a/hugo.yaml
+++ b/hugo.yaml
@@ -7,7 +7,7 @@ params:
   author:
     name: 猫低温 (Steven)
     email: steven@example.com
-  subtitle: 游戏 · AI · Crypto · IP · 上市公司
+  subtitle: 游戏 · AI · Crypto · IP · 哲学
 
 taxonomies:
   category: categories
