更新分类：哲学改为其他

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -7,7 +7,7 @@ params:
   author:
     name: 猫低温 (Steven)
     email: steven@example.com
-  subtitle: 游戏 · AI · Crypto · IP · 哲学
+  subtitle: 游戏 · AI · Crypto · IP · 其他
 
 taxonomies:
   category: categories
